<resources>
    <string name="app_name">Quiz</string>
    <string name="app_title">SIT305 Quiz App</string>
    <string name="name_prompt">Enter your name:</string>
    <string name="name_hint">Jane</string>
    <string name="start_button_text">START</string>
    <string name="next_button_text">Next</string>
    <string name="submit_button_text">Submit</string>
    <string name="score_title">YOUR SCORE:</string>
    <string name="counter_text">%1$d/%2$d</string>
    <string name="congrats_text">Congratulations %1$s!</string>
    <string name="score_text">%1$d/%2$d</string>
    <string name="new_quiz_text">Take new quiz</string>
    <string name="finish_text">Finish</string>
</resources>